# natLHA

./: DEW_code.py  LICENSE.md  README.md  dew_code.py  dew_source_code.py  dew_source_code_v1_1_2.py  dew_source_code_v1_3.py  dew_source_code_v_1_1.py  n1_scan_analyzer.py  n1_scan_analyzer_linux_gnu_parallel.py
DBG4SLHA/: CMakeLists.txt
DBG4SLHA/include/: EWSB_loop.hpp  MSSM_RGE_solver_with_stopfinder.hpp  mZ_numsolver.hpp
DBG4SLHA/src/: MSSM_RGE_solver_with_stopfinder.cpp  terminal_UI.cpp
DEW4SLHA/: CMakeLists.txt  libQt5DBus.so.5  libQt5EglFSDeviceIntegration.so.5  libQt5EglFsKmsSupport.so.5  libQt5Network.so.5  libQt5Pdf.so.5  libQt5Qml.so.5  libQt5QmlModels.so.5  libQt5Svg.so.5  libQt5VirtualKeyboard.so.5  libQt5WebSockets.so.5  libQt5XcbQpa.so.5  libcrypto.so.1.1  libdbus-1.so.3  libfontconfig.so.1  libglib-2.0.so.0  libgssapi_krb5.so.2  libkrb5.so.3  libtiff.so.5  libtinfo.so.6  libtinfow.so.6  libxcb-atom.so.1  libxcb-aux.so.0  libxcb-event.so.1  libxkbcommon-x11.so.0  libxkbcommon.so.0  libz.so.1  tclConfig.sh  tkConfig.sh
DEW4SLHA/Sample_test_points/NUHM1/: NUHM1_test_out
DEW4SLHA/Sample_test_points/NUHM2/: NUHM2_test_out
DEW4SLHA/Sample_test_points/NUHM3/: NUHM3_DHS_contrib_list.txt
DEW4SLHA/Sample_test_points/NUHM4/: NUHM4_DHS_contrib_list.txt
DEW4SLHA/a/: a210  abm85  abm85e  abm85h  adm36  alt5  altos-3  altos2
DEW4SLHA/b/: basic4
DEW4SLHA/c/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt  crt-vt220
DEW4SLHA/cryptography-37.0.1.dist-info/: RECORD  direct_url.json
DEW4SLHA/d/: ddr3180  dec-vt220  dec-vt330
DEW4SLHA/e/: emu-220
DEW4SLHA/g/: go-225  go140  go140w
DEW4SLHA/h/: h29a-kc-uc  h29a-nkc-bc  h29a-nkc-uc  h80  he80  hp2392  hp2641a  hp2647a  hp300h  hp700-wy  hp9845  hp98550a  hpex  hpsub
DEW4SLHA/i/: ims-ansi
DEW4SLHA/importlib_metadata-4.11.3.dist-info/: RECORD  direct_url.json
DEW4SLHA/include/: DEW_calc.hpp  MSSM_RGE_solver.hpp  MSSM_RGE_solver_with_stopfinder.hpp  radcorr_calc.hpp
DEW4SLHA/jsonschema-4.16.0.dist-info/: RECORD  direct_url.json
DEW4SLHA/k/: kt7
DEW4SLHA/m/: mai  mt4520-rv
DEW4SLHA/n/: ncsa  ncsa-m  ncsa-m-ns  ncsa-ns  ncsa-vt220  ncsa-vt220-8  netbsd6  news-29  news-29-euc  news-29-sjis  news-33  news-33-euc  news-33-sjis  news-42  news-42-euc  news-42-sjis  news-o  news-old-unk  news-unk  news28  news28-a  newscbm  newscbm-a  newscbm-o  nwp-517  nwp-517-w  nwp512  nwp512-a  nwp513  nwp513-a  nwp513-o  nwp514-o  nwp517  nwp517-w
DEW4SLHA/nbconvert-6.4.4.dist-info/: RECORD
DEW4SLHA/o/: o85h  opus3n1+  otek4115
DEW4SLHA/p/: pcmw  pcvt25  pcvt25-color  pcvt25w  pcvt28  pcvt28w  pcvt35  pcvt35w  pcvt40  pcvt40w  pcvt43  pcvt43w  pcvt50  pcvt50w  pcvtXX
DEW4SLHA/r/: rebus3180
DEW4SLHA/src/: DEW_calc.cpp  DSN_calc.cpp  EWSB_loop.cpp  mZ_numsolver.cpp  terminal_UI.cpp
DEW4SLHA/t/: ti916  ti916-132  ti916-220-8  ti916-8-132  tvi9065  tvi910  tvi910+  tvi912  tvi912b  tvi912b-2p  tvi912b-2p-mc  tvi912b-mc  tvi912b-p  tvi912b-unk  tvi912b-unk-vb  tvi912b-vb  tvi912b-vb-p  tvi912c-2p-p  tvi912c-2p-unk  tvi912c-mc-vb  tvi912c-p  tvi912c-p-vb  tvi912c-unk-vb  tvi912c-vb-mc  tvi912cc  tvi920b  tvi920b-2p  tvi920b-2p-mc  tvi920b-2p-unk  tvi920b-mc  tvi920b-mc-vb  tvi920b-p  tvi920b-p-vb  tvi920b-unk  tvi920b-vb  tvi920b-vb-mc  tvi920b-vb-p  tvi920c  tvi920c-2p-mc  tvi920c-2p-p  (+7 more)
DEW4SLHA/u/: ultima2  uniterm  uts30
DEW4SLHA/v/: v200-nam  versaterm  vt200  vt200-8  vt200-w  vt220  vt220-base  vt220-js  vt220-nam  vt220-old  vt220d  vt300  vt300-nam  vt300-w-nam  vt320  vt320-k311  vt320-w  vt320nam  vt340  vt400  vt400-24  vt420  vt420f  vt420pc  vt420pcdos  vt510  vt510pc  vt510pcdos  vt520  vt520ansi  vt525
DEW4SLHA/w/: wsvt25  wsvt25m
DEW4SLHA/x/: x68k-ite
DEW4SLHA/z/: z29a-kc-bc  z29a-kc-uc  z29a-nkc-bc  z29a-nkc-uc  z340  z340-nam
DEW4SLHA_standalone_old/a/: adm36
DEW4SLHA_standalone_old/c/: cit101e-132
DEW4SLHA_standalone_old/d/: dec-vt220
DEW4SLHA_standalone_old/g/: go140  go140w
DEW4SLHA_standalone_old/h/: hp2392  hp98550  hpsub
DEW4SLHA_standalone_old/k/: kt7
DEW4SLHA_standalone_old/n/: ncsa-m-ns  ncsa-ns  news-29-sjis  news-33-euc  news-33-sjis  news-old-unk  news28  news29
DEW4SLHA_v_1_3_src/: GUT_to_weak_runner.py
DHS4SLHA/: CMakeLists.txt
DHS4SLHA/include/: DHS_calc.hpp  mZ_numsolver.hpp  terminal_UI.hpp
DHS4SLHA/src/: EWSB_loop.cpp  MSSM_RGE_solver.cpp  radcorr_calc.cpp  terminal_UI.cpp
DSN4SLHA/: CMakeLists.txt
DSN4SLHA/include/: DSN_calc.hpp  EWSB_loop.hpp  other_derivs.hpp
DSN4SLHA/src/: DBG_calc.cpp  DHS_calc.cpp  DSN_calc.cpp  mZ_numsolver.cpp  other_derivs.cpp  terminal_UI.cpp
Older_DEW4SLHA_versions/: dew_source_code_v1_2.py
Sample test points/: NUHM4_test_out  README.md  pMSSM_test_out
n_1_string_landscape_scan/: dew_scan.sh  dew_scan_2.sh  dew_scan_3.sh  dew_scan_4.sh  dew_scan_5.sh  dew_scan_6.sh  dew_scan_7.sh  dew_scan_8.sh  softsusy_single_NUHM3_input_writer.py  softsusy_single_NUHM3_input_writer_2.py  softsusy_single_NUHM3_input_writer_3.py  softsusy_single_NUHM3_input_writer_4.py  softsusy_single_NUHM3_input_writer_5.py  softsusy_single_NUHM3_input_writer_6.py  softsusy_single_NUHM3_input_writer_7.py  softsusy_single_NUHM3_input_writer_8.py  softsusy_single_NUHM3_output_analyzer_cpu.py  softsusy_single_NUHM3_output_analyzer_cpu_2.py  softsusy_single_NUHM3_output_analyzer_cpu_3.py  softsusy_single_NUHM3_output_analyzer_cpu_4.py  softsusy_single_NUHM3_output_analyzer_cpu_5.py  softsusy_single_NUHM3_output_analyzer_cpu_6.py  softsusy_single_NUHM3_output_analyzer_cpu_7.py  softsusy_single_NUHM3_output_analyzer_cpu_8.py  test_shell_script.sh  test_shell_script_2.sh  test_shell_script_3.sh  test_shell_script_4.sh  test_shell_script_5.sh  test_shell_script_6.sh  test_shell_script_7.sh  test_shell_script_8.sh
natLHA/: CMakeLists.txt
natLHA/include/: DBG_calc.hpp  DEW_calc.hpp  DHS_calc.hpp  DSN_calc.hpp  MSSM_RGE_solver.hpp  constants.hpp  radcorr_calc.hpp
natLHA/src/: DBG_calc.cpp  DEW_calc.cpp  DHS_calc.cpp  DSN_calc.cpp  radcorr_calc.cpp  terminal_UI.cpp  tree_mass_calc.cpp
src/: RGEsolver.py  main.py
v2/include/: CalcTanb.hpp  (+10 more)
(+228 files in other folders)
